--- a/lab1/Federico_Braidi_Rlab01.ipynb
+++ b/lab1/Federico_Braidi_Rlab01.ipynb
@@ -1032,7 +1032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -1040,86 +1040,12 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "'Grove St PATH'"
-      ],
-      "text/latex": [
-       "'Grove St PATH'"
-      ],
-      "text/markdown": [
-       "'Grove St PATH'"
-      ],
-      "text/plain": [
-       "[1] \"Grove St PATH\""
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<style>\n",
-       ".list-inline {list-style: none; margin:0; padding: 0}\n",
-       ".list-inline>li {display: inline-block}\n",
-       ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
-       "</style>\n",
-       "<ol class=list-inline><li>'1 Ave &amp; E 16 St'</li><li>'8 Ave &amp; W 52 St'</li><li>'Broadway &amp; W 56 St'</li><li>'E 33 St &amp; 5 Ave'</li><li>'Norfolk St &amp; Broome St'</li><li>'South St &amp; Gouverneur Ln'</li><li>'Spruce St &amp; Nassau St'</li><li>'W 15 St &amp; 10 Ave'</li><li>'W 15 St &amp; 6 Ave'</li><li>'W 20 St &amp; 11 Ave'</li><li>'W 27 St &amp; 10 Ave'</li><li>'W 38 St &amp; 8 Ave'</li><li>'W 41 St &amp; 8 Ave'</li><li>'W 43 St &amp; 6 Ave'</li><li>'W 56 St &amp; 10 Ave'</li><li>'West St &amp; Chambers St'</li></ol>\n"
-      ],
-      "text/latex": [
-       "\\begin{enumerate*}\n",
-       "\\item '1 Ave \\& E 16 St'\n",
-       "\\item '8 Ave \\& W 52 St'\n",
-       "\\item 'Broadway \\& W 56 St'\n",
-       "\\item 'E 33 St \\& 5 Ave'\n",
-       "\\item 'Norfolk St \\& Broome St'\n",
-       "\\item 'South St \\& Gouverneur Ln'\n",
-       "\\item 'Spruce St \\& Nassau St'\n",
-       "\\item 'W 15 St \\& 10 Ave'\n",
-       "\\item 'W 15 St \\& 6 Ave'\n",
-       "\\item 'W 20 St \\& 11 Ave'\n",
-       "\\item 'W 27 St \\& 10 Ave'\n",
-       "\\item 'W 38 St \\& 8 Ave'\n",
-       "\\item 'W 41 St \\& 8 Ave'\n",
-       "\\item 'W 43 St \\& 6 Ave'\n",
-       "\\item 'W 56 St \\& 10 Ave'\n",
-       "\\item 'West St \\& Chambers St'\n",
-       "\\end{enumerate*}\n"
-      ],
-      "text/markdown": [
-       "1. '1 Ave &amp; E 16 St'\n",
-       "2. '8 Ave &amp; W 52 St'\n",
-       "3. 'Broadway &amp; W 56 St'\n",
-       "4. 'E 33 St &amp; 5 Ave'\n",
-       "5. 'Norfolk St &amp; Broome St'\n",
-       "6. 'South St &amp; Gouverneur Ln'\n",
-       "7. 'Spruce St &amp; Nassau St'\n",
-       "8. 'W 15 St &amp; 10 Ave'\n",
-       "9. 'W 15 St &amp; 6 Ave'\n",
-       "10. 'W 20 St &amp; 11 Ave'\n",
-       "11. 'W 27 St &amp; 10 Ave'\n",
-       "12. 'W 38 St &amp; 8 Ave'\n",
-       "13. 'W 41 St &amp; 8 Ave'\n",
-       "14. 'W 43 St &amp; 6 Ave'\n",
-       "15. 'W 56 St &amp; 10 Ave'\n",
-       "16. 'West St &amp; Chambers St'\n",
-       "\n",
-       "\n"
-      ],
-      "text/plain": [
-       " [1] \"1 Ave & E 16 St\"          \"8 Ave & W 52 St\"         \n",
-       " [3] \"Broadway & W 56 St\"       \"E 33 St & 5 Ave\"         \n",
-       " [5] \"Norfolk St & Broome St\"   \"South St & Gouverneur Ln\"\n",
-       " [7] \"Spruce St & Nassau St\"    \"W 15 St & 10 Ave\"        \n",
-       " [9] \"W 15 St & 6 Ave\"          \"W 20 St & 11 Ave\"        \n",
-       "[11] \"W 27 St & 10 Ave\"         \"W 38 St & 8 Ave\"         \n",
-       "[13] \"W 41 St & 8 Ave\"          \"W 43 St & 6 Ave\"         \n",
-       "[15] \"W 56 St & 10 Ave\"         \"West St & Chambers St\"   "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "ename": "ERROR",
+     "evalue": "Error in data %>% group_by(start.station.name) %>% summarize(num_rides = n()): could not find function \"%>%\"\n",
+     "output_type": "error",
+     "traceback": [
+      "Error in data %>% group_by(start.station.name) %>% summarize(num_rides = n()): could not find function \"%>%\"\nTraceback:\n"
+     ]
     }
    ],
    "source": [
