--- a/lab1/Federico_Braidi_Rlab01.ipynb
+++ b/lab1/Federico_Braidi_Rlab01.ipynb
@@ -289,7 +289,8 @@
     "maxduration <- max(data[,\"tripduration\"])/60\n",
     "maxduration\n",
     "minduration <- min(data[,\"tripduration\"])/60\n",
-    "minduration"
+    "minduration\n",
+    "#Not a reasonable value for the maxduration, a strange value (but possible) for minduration"
    ]
   },
   {
@@ -362,7 +363,7 @@
     "mean \n",
     "median <- median(data[data$tripduration < 10800,\"tripduration\"])/60\n",
     "median\n",
-    "skimmed <- nrow(data)-nrow(data[data$tripduration < 180, ])\n",
+    "skimmed <- nrow(data)-nrow(data[data$tripduration < 180,])\n",
     "skimmed"
    ]
   },
@@ -762,7 +763,7 @@
     }
    ],
    "source": [
-    "#7.1 Calculate average speed of a user ignoring > 1 hour trips\n",
+    "#7.1 Calculate average speed (in km/h) of a user ignoring > 1 hour trips\n",
     "data_one_hour <- data[data$tripduration<3600,]\n",
     "#data_one_hour\n",
     "data_one_hour$dist <- distHaversine(cbind(data_one_hour$start.station.longitude,data_one_hour$start.station.latitude),\n",
@@ -1032,7 +1033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -1040,12 +1041,86 @@
    },
    "outputs": [
     {
-     "ename": "ERROR",
-     "evalue": "Error in data %>% group_by(start.station.name) %>% summarize(num_rides = n()): could not find function \"%>%\"\n",
-     "output_type": "error",
-     "traceback": [
-      "Error in data %>% group_by(start.station.name) %>% summarize(num_rides = n()): could not find function \"%>%\"\nTraceback:\n"
-     ]
+     "data": {
+      "text/html": [
+       "'Grove St PATH'"
+      ],
+      "text/latex": [
+       "'Grove St PATH'"
+      ],
+      "text/markdown": [
+       "'Grove St PATH'"
+      ],
+      "text/plain": [
+       "[1] \"Grove St PATH\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       ".list-inline {list-style: none; margin:0; padding: 0}\n",
+       ".list-inline>li {display: inline-block}\n",
+       ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
+       "</style>\n",
+       "<ol class=list-inline><li>'1 Ave &amp; E 16 St'</li><li>'8 Ave &amp; W 52 St'</li><li>'Broadway &amp; W 56 St'</li><li>'E 33 St &amp; 5 Ave'</li><li>'Norfolk St &amp; Broome St'</li><li>'South St &amp; Gouverneur Ln'</li><li>'Spruce St &amp; Nassau St'</li><li>'W 15 St &amp; 10 Ave'</li><li>'W 15 St &amp; 6 Ave'</li><li>'W 20 St &amp; 11 Ave'</li><li>'W 27 St &amp; 10 Ave'</li><li>'W 38 St &amp; 8 Ave'</li><li>'W 41 St &amp; 8 Ave'</li><li>'W 43 St &amp; 6 Ave'</li><li>'W 56 St &amp; 10 Ave'</li><li>'West St &amp; Chambers St'</li></ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item '1 Ave \\& E 16 St'\n",
+       "\\item '8 Ave \\& W 52 St'\n",
+       "\\item 'Broadway \\& W 56 St'\n",
+       "\\item 'E 33 St \\& 5 Ave'\n",
+       "\\item 'Norfolk St \\& Broome St'\n",
+       "\\item 'South St \\& Gouverneur Ln'\n",
+       "\\item 'Spruce St \\& Nassau St'\n",
+       "\\item 'W 15 St \\& 10 Ave'\n",
+       "\\item 'W 15 St \\& 6 Ave'\n",
+       "\\item 'W 20 St \\& 11 Ave'\n",
+       "\\item 'W 27 St \\& 10 Ave'\n",
+       "\\item 'W 38 St \\& 8 Ave'\n",
+       "\\item 'W 41 St \\& 8 Ave'\n",
+       "\\item 'W 43 St \\& 6 Ave'\n",
+       "\\item 'W 56 St \\& 10 Ave'\n",
+       "\\item 'West St \\& Chambers St'\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. '1 Ave &amp; E 16 St'\n",
+       "2. '8 Ave &amp; W 52 St'\n",
+       "3. 'Broadway &amp; W 56 St'\n",
+       "4. 'E 33 St &amp; 5 Ave'\n",
+       "5. 'Norfolk St &amp; Broome St'\n",
+       "6. 'South St &amp; Gouverneur Ln'\n",
+       "7. 'Spruce St &amp; Nassau St'\n",
+       "8. 'W 15 St &amp; 10 Ave'\n",
+       "9. 'W 15 St &amp; 6 Ave'\n",
+       "10. 'W 20 St &amp; 11 Ave'\n",
+       "11. 'W 27 St &amp; 10 Ave'\n",
+       "12. 'W 38 St &amp; 8 Ave'\n",
+       "13. 'W 41 St &amp; 8 Ave'\n",
+       "14. 'W 43 St &amp; 6 Ave'\n",
+       "15. 'W 56 St &amp; 10 Ave'\n",
+       "16. 'West St &amp; Chambers St'\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       " [1] \"1 Ave & E 16 St\"          \"8 Ave & W 52 St\"         \n",
+       " [3] \"Broadway & W 56 St\"       \"E 33 St & 5 Ave\"         \n",
+       " [5] \"Norfolk St & Broome St\"   \"South St & Gouverneur Ln\"\n",
+       " [7] \"Spruce St & Nassau St\"    \"W 15 St & 10 Ave\"        \n",
+       " [9] \"W 15 St & 6 Ave\"          \"W 20 St & 11 Ave\"        \n",
+       "[11] \"W 27 St & 10 Ave\"         \"W 38 St & 8 Ave\"         \n",
+       "[13] \"W 41 St & 8 Ave\"          \"W 43 St & 6 Ave\"         \n",
+       "[15] \"W 56 St & 10 Ave\"         \"West St & Chambers St\"   "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -1057,8 +1132,8 @@
     "  group_by(end.station.name) %>%\n",
     "  summarize(num_rides = n())\n",
     "\n",
-    "max_start_nun <- max(start$num_rides)\n",
-    "max_start_name <- start[start$num_rides==max_start_nun,]$start.station.name\n",
+    "max_start_num <- max(start$num_rides)\n",
+    "max_start_name <- start[start$num_rides==max_start_num,]$start.station.name\n",
     "max_start_name\n",
     "min_end_num <- min(end$num_rides)\n",
     "min_end_name <- end[end$num_rides==min_end_num,]$end.station.name\n",
@@ -1067,7 +1142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 18,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -1093,14 +1168,14 @@
    "source": [
     "#8.2 Show distribution of start stations\n",
     "plot(start$num_rides,\n",
-    "    xlab=\"Index of the station\",\n",
+    "    xlab=\"Index of the station\",    #put index instead of names because it would have been unreadable\n",
     "    ylab=\"Number of rides\",\n",
     "    main=\"Number of rides who have a certain station as start station\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 19,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -1220,7 +1295,7 @@
     "\n",
     "#prova\n",
     "prova[order(prova$num_rides, decreasing = TRUE), ][1:3,]\n",
-    "prova[order(prova$num_rides, decreasing = FALSE), ][1:3,]"
+    "prova[order(prova$num_rides, decreasing = FALSE), ][1:3,]       #there are other routes with only 1 ride, i showed only 3 as requested"
    ]
   }
  ],
